- stuck at a bug... ugh...

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --clr-primary: #0d121d;
-  --clr-secondary: #121a29;
-  --clr-neutral: #767f92;
+  --clr-primary: #292b2d;
+  --clr-secondary: #77da95;
+  --clr-neutral: #518a6b;
 
   --clr-white: #f1f2f9;
   --clr-blue: #2187d0;
